--- a/BacaLexia/StoryBoard/PilihV.storyboard
+++ b/BacaLexia/StoryBoard/PilihV.storyboard
@@ -21,10 +21,6 @@
                                 <rect key="frame" x="-12" y="0.0" width="1217" height="834"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="koalaPapan" translatesAutoresizingMaskIntoConstraints="NO" id="ZGf-zy-olI" userLabel="maskot">
-                                <rect key="frame" x="802" y="546" width="416" height="256"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="a" translatesAutoresizingMaskIntoConstraints="NO" id="uhw-61-OzB" userLabel="A">
                                 <rect key="frame" x="117" y="111" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -49,6 +45,15 @@
                                 <rect key="frame" x="0.0" y="0.0" width="151" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BDc-TH-E31">
+                                <rect key="frame" x="0.0" y="706" width="1194" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9iA-gD-eGy">
+                                <rect key="frame" x="805" y="581" width="446" height="253"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="koalaPapan"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="c2d-oT-ipg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -56,8 +61,11 @@
                     <connections>
                         <outlet property="aButton" destination="uhw-61-OzB" id="3Xu-9B-8ug"/>
                         <outlet property="arrowButton" destination="2ZN-7M-Vjo" id="Xrx-ar-w4P"/>
+                        <outlet property="background" destination="XPr-iK-HTo" id="kCW-QN-tKp"/>
+                        <outlet property="bantuanBoard" destination="BDc-TH-E31" id="hrg-uO-pPs"/>
                         <outlet property="eButton" destination="nx5-Xr-S19" id="bmO-30-oHV"/>
                         <outlet property="iButton" destination="ktM-wt-O0e" id="kiI-6Q-sDR"/>
+                        <outlet property="maskot" destination="9iA-gD-eGy" id="Nhy-Mf-bcm"/>
                         <outlet property="oButton" destination="vlH-Sk-4Hf" id="STE-oz-OGj"/>
                         <outlet property="uButton" destination="uau-gV-GRY" id="kAJ-iB-ax8"/>
                     </connections>
